--- a/package.json
+++ b/package.json
@@ -1,6 +1,19 @@
 {
-  "name": "klinekache",
+  "name": "kbm",
   "version": "0.0.0",
+  "main": "index.js",
+  "scripts": {
+    "prebuild": "npm i",
+    "build": "tsc",
+    "start": "node dist/start.js"
+  },
+  "devDependencies": {
+    "@types/adm-zip": "^0.4.34",
+    "@types/node": "^16.4.1",
+    "typescript": "^4.3.5"
+  },
   "dependencies": {
+    "adm-zip": "^0.5.5",
+    "node-fetch": "^2.6.1"
   }
 }
