--- a/.nova/Configuration.json
+++ b/.nova/Configuration.json
@@ -3,5 +3,7 @@
   "apexskier.typescript.config.userPreferences.includeCompletionsForImportStatements" : true,
   "apexskier.typescript.config.userPreferences.includeCompletionsForModuleExports" : true,
   "apexskier.typescript.config.userPreferences.includeCompletionsWithInsertText" : true,
-  "apexskier.typescript.config.userPreferences.includeCompletionsWithSnippetText" : true
+  "apexskier.typescript.config.userPreferences.includeCompletionsWithSnippetText" : true,
+  "co.gwil.deno.enable" : true,
+  "co.gwil.deno.unstable" : true
 }
